# testtest

./: .env.example  .gitignore  README.md  docker-compose.yml  model_info.txt  pyproject.toml  requirements.txt
data/pmdarima3/: forecast_results.csv  forecast_simple.csv
data/prophet/: forecast_results_prophet.csv
data/statsmodels/: data_statistics.txt  final_forecast.csv  model_info.txt  model_metrics.txt  model_summary_arima(1, 1, 1).txt  model_summary_arima(1, 1, 2).txt  model_summary_arima(2, 1, 1).txt  model_summary_arima(2, 1, 2).txt  model_summary_arima(3, 1, 3).txt
data/statsmodels2/: forecast_results.csv
data/statsmodels3/: sarima_forecast_results.csv  sarima_simple_forecast.csv
src/: database.py  forecast-pmdarima3.py  forecast-prophet.py  forecast-statsmodels3.py
src/old/: check_pmdarima.py  forecast-pmdarima.py  forecast-pmdarima2.py  forecast-prophet2.py  forecast-statsmodels.py  forecast-statsmodels2.py  test_plot.py
